[metadata]
name = avian
version = attr: avian.__version__
author = Lars van Vianen
author_email = lars@starling.associates
maintainer = Starling Associates
maintainer_email = info@starling.associates
url = https://www.starling.associates
download_url = https://www.starling.associates
project_urls =
    documentation = https://avian.pypa.io/
    repository = https://github.com/starling-cloud/avian
keywords = starling, avian, geometry, geospatial
description = Starling Avian is a Spatial Python Framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = file: LICENSE.txt
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries

[options]
package_dir =
    =src
packages = find:
include_package_data = True
zip_safe = True
python_requires = >=3.7
install_requires =

[options.packages.find]
where = src
exclude =
	build*
	dist*
	docs*
	tests*
	*.tests
	*.tests.*
	tools*
    examples*

[options.package_data]
example = data/schema.json, *.txt
* = README.md
